<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <!-- About title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="16dp"
                android:text="@string/more_about"
                android:textSize="@dimen/more_item_title_size"
                android:textAllCaps="true"/>

            <!-- Introduction -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Introduction -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/more_introduction"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/quizz_item_title_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="8dp"
                                android:background="@color/separator" />
                        </LinearLayout>

                    </RelativeLayout>

                    <!-- Send me an email -->
                    <RelativeLayout
                        android:id="@+id/send_me_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/more_item_height"
                                android:gravity="center_vertical"
                                android:text="@string/more_send_email"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/more_item_title_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/separator" />
                        </LinearLayout>


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:contentDescription="@string/more_icon_arrow_content_description"
                            app:srcCompat="@drawable/ic_right_arrow"
                            android:tint="@color/colorPrimaryGreen" />

                    </RelativeLayout>

                    <!-- Recommend me -->
                    <RelativeLayout
                        android:id="@+id/recommend"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/more_item_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/more_recommend"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="16dp"
                            android:layout_centerVertical="true"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/more_item_title_size" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:contentDescription="@string/more_icon_arrow_content_description"
                            app:srcCompat="@drawable/ic_right_arrow"
                            android:tint="@color/colorPrimaryGreen" />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Credits -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/more_credits"
                android:textSize="@dimen/more_item_title_size"
                android:textAllCaps="true"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorWhite"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Credits for Kanji Alive -->
                    <RelativeLayout
                        android:id="@+id/kanji_alive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/more_item_height"
                                android:gravity="center_vertical"
                                android:text="@string/more_credits_kanji_alive"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/more_item_title_size" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/separator" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:contentDescription="@string/more_icon_arrow_content_description"
                            app:srcCompat="@drawable/ic_right_arrow"
                            android:tint="@color/colorPrimaryGreen" />

                    </RelativeLayout>

                    <!-- Credits for Flaticon -->
                    <RelativeLayout
                        android:id="@+id/flaticon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_marginLeft="16dp"
                                android:layout_height="@dimen/more_item_height"
                                android:gravity="center_vertical"
                                android:text="@string/more_credits_flaticon"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/more_item_title_size" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            app:srcCompat="@drawable/ic_right_arrow"
                            android:contentDescription="@string/more_icon_arrow_content_description"
                            android:tint="@color/colorPrimaryGreen" />

                    </RelativeLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
</ScrollView>